# crewAI

dev/: README.md  pyproject.toml  report.md  run.txt  settings.py
dev/src/dev/: crew.py  main.py
